# ChangeLog for dev-util/netbeans
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Jan 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.1_alpha20080127134700.ebuild:
  now 'harness' cluster compiles too, work on 'ide' cluster in progress, now
  need dev-java/ini4j library to be packaged

  28 Jan 2008; Miroslav Šulc <fordfrog@gentoo.org> ++:
  Added new ebuild, but not usable atm, only netbeans platform compiles atm.

  25 Jan 2008; Petteri Räty <betelgeuse@gentoo.org> netbeans-6.0.ebuild,
  netbeans-6.1_alpha20080106171826.ebuild,
  netbeans-6.1_alpha20080118072101.ebuild:
  Use slot deps for lucene.

  19 Jan 2008; Miroslav Šulc <fordfrog@gentoo.org> ++:
  Version bump

  07 Jan 2008; Miroslav Šulc <fordfrog@gentoo.org> ++, netbeans-6.0.ebuild,
  -netbeans-6.1_alpha20071124024617.ebuild,
  -netbeans-6.1_alpha20071216221838.ebuild:
  Version bump + added support for locales

  17 Dec 2007; Miroslav Šulc <fordfrog@gentoo.org> ++:
  Version bump

  03 Dec 2007; Miroslav Šulc <fordfrog@gentoo.org> ++,
  -netbeans-6.0_rc2_p20071126.ebuild:
  Version bump

  26 Nov 2007; Miroslav Šulc <fordfrog@gentoo.org>
  +files/6.1/visualweb-JxpsSerializer.java-xerces-2.8.1.patch, ++, ++,
  +files/6.1/config.sh, +files/6.1/startscript.sh,
  -netbeans-6.0_beta1_p20071016040557.ebuild,
  -netbeans-6.0_beta2_p20071024005630.ebuild,
  -netbeans-6.0_beta2_p20071105091953.ebuild,
  -netbeans-6.0_rc1_p20071119081056.ebuild:
  nb 6.0 version bump and added nb 6.1 ebuild in separate slot

  19 Nov 2007; Miroslav Šulc <fordfrog@gentoo.org> ++:
  Version bump

  06 Nov 2007; Miroslav Šulc <fordfrog@gentoo.org> ++:
  Version bump

  25 Oct 2007; Miroslav Šulc <fordfrog@gentoo.org> ++,
  -netbeans-6.0_beta1_p20070929075133.ebuild,
  -netbeans-6.0_beta1_p20071008091345.ebuild:
  Version bump

  16 Oct 2007; Miroslav Šulc <fordfrog@gentoo.org> ++:
  Version bump

  08 Oct 2007; Miroslav Šulc <fordfrog@gentoo.org> ++:
  Version bump
